# Genesys-MCP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/genesys_mcp/: __init__.py  __main__.py  cli.py  config.py  license.py  logging_setup.py  registry.py  server.py  tracing.py
src/genesys_mcp/middleware/: __init__.py  auth_context.py  refresh.py  retry.py
tests/: conftest.py  test_cli.py  test_config.py  test_license.py  test_logging_setup.py  test_registry.py  test_server.py  test_tracing.py
tests/middleware/: test_auth_context.py  test_refresh.py  test_retry.py
